开始开发课程管理模块和数据字典

--- a/EduOnline-base/pom.xml
+++ b/EduOnline-base/pom.xml
@@ -99,5 +99,18 @@
         </dependency>
 
     </dependencies>
-
+<!--  跳过可执行jar打包
+  <build>
+        <plugins>
+        &lt;!&ndash;打包插件&ndash;&gt;
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <skip>true</skip>
+            </configuration>
+        </plugin>
+        </plugins>
+    </build>
+  -->
 </project>
