--- a/EduOnline-content/EduOnline-content-service/src/main/resources/application.yml
+++ b/EduOnline-content/EduOnline-content-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://110.40.226.140:3306/xcplus_content?serverTimezone=UTC&userUnicode=true&useSSL=false&
     username: root
-    password: mingqian
+    password: 123456
 # 日志文件配置路径
 logging:
   config: classpath:log4j2-dev.xml
