--- a/EduOnline-parent/pom.xml
+++ b/EduOnline-parent/pom.xml
@@ -236,11 +236,11 @@
         </resources>
         <plugins>
             <!--打包插件-->
-            <plugin>
+<!--            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
-            </plugin>
+            </plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
