--- a/EduOnline-system/EduOnline-system-service/pom.xml
+++ b/EduOnline-system/EduOnline-system-service/pom.xml
@@ -19,6 +19,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <!-- nacos 配置-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
         <!-- MySQL 驱动 -->
         <dependency>
             <groupId>mysql</groupId>
